<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:src="@drawable/app_icon"
            android:layout_gravity="center"
            android:contentDescription="@string/todo" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/login_to_your_account"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_texfeild"
            app:errorTextColor="@color/errorcolor"
            app:boxStrokeErrorColor="@color/errorcolor"
            app:errorIconTint="@color/errorcolor"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_phone_number"
                android:text="8919480920"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_texfeild"
            app:errorTextColor="@color/errorcolor"
            app:boxStrokeErrorColor="@color/errorcolor"
            app:errorIconTint="@color/errorcolor"
            app:errorIconDrawable="@null"
            app:passwordToggleEnabled="true"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:text="Test@123"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_gravity="end"
           />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_now"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:backgroundTint="@color/buttoncolor"
            style="@style/Widget.MaterialComponents.Button"/>


        <TextView
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/buttoncolor"
            android:gravity="center"
            android:padding="10dp"
            />


    </LinearLayout>




    <include
        android:id="@+id/progress_bar"
        layout="@layout/custom_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>