<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    >

    <androidx.cardview.widget.CardView
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/closeImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:contentDescription="@string/todo"
                android:focusable="true" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/txtClear"
                android:layout_toEndOf="@+id/closeImage"
                android:text="@string/reset_password"
                android:textAllCaps="false"
                />


            <TextView
                android:id="@+id/txtClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/close"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:focusable="true" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20sp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/inputEmail"
            app:errorTextColor="@color/buttoncolor"
            app:boxStrokeErrorColor="@color/buttoncolor"
            app:errorIconTint="@color/buttoncolor"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="15dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtResendOTP"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            android:text="@string/resendotp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnOtp"
            android:text="@string/get_otp"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:backgroundTint="@color/buttoncolor"
            style="@style/Widget.MaterialComponents.Button"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>
    </LinearLayout>




</LinearLayout>