<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/app_icon"
                android:layout_gravity="center"
                android:contentDescription="@string/todo" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_an_account"
                android:fontFamily="@font/roboto"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"
               />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:errorTextColor="@color/errorcolor"
                app:boxStrokeErrorColor="@color/errorcolor"
                app:errorIconTint="@color/errorcolor"
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etName"
                    android:hint="@string/name"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_texfeild"
                app:errorTextColor="@color/errorcolor"
                app:boxStrokeErrorColor="@color/errorcolor"
                app:errorIconTint="@color/errorcolor"
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#757575" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_texfeild"
                app:errorTextColor="@color/errorcolor"
                app:boxStrokeErrorColor="@color/errorcolor"
                app:errorIconTint="@color/errorcolor"
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etPhone"
                    android:hint="@string/phone_number"
                    android:maxLength="10"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/txtMobileError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_texfeild"
                app:errorTextColor="@color/errorcolor"
                app:boxStrokeErrorColor="@color/errorcolor"
                app:errorIconTint="@color/errorcolor"
                app:errorIconDrawable="@null"
                app:passwordToggleEnabled="true"
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etPassword"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:backgroundTint="@color/buttoncolor"
                style="@style/Widget.MaterialComponents.Button"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/buttoncolor"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:gravity="center"
                android:padding="10dp"/>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <include layout="@layout/custom_progress"
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>