<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_navigation_home_to_locationDialogFragment"
            app:destination="@id/locationDialogFragment" />
        <action
            android:id="@+id/action_navigation_home_to_filterDialogFragment"
            app:destination="@id/filterDialogFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myapplication.ui.fragments.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myapplication.ui.fragments.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <dialog
        android:id="@+id/locationDialogFragment"
        android:name="com.example.myapplication.ui.fragments.LocationDialogFragment"
        android:label="fragment_location_dialog"
        tools:layout="@layout/fragment_location_dialog" >
        <action
            android:id="@+id/action_locationDialogFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </dialog>
    <dialog
        android:id="@+id/filterDialogFragment"
        android:name="com.example.myapplication.ui.fragments.FilterDialogFragment"
        android:label="FilterDialogFragment" >
        <action
            android:id="@+id/action_filterDialogFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </dialog>

</navigation>