<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/version_update"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/greyColor" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

           <!-- <WebView
                android:id="@+id/webView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="WebViewLayout" />-->

            <!--<org.sufficientlysecure.htmltextview.HtmlTextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:visibility="visible"
                android:textAppearance="@android:style/TextAppearance.Small" />
-->

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2">

        <Button
            android:id="@+id/btnLater"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/later"
            android:textAllCaps="false"
            android:backgroundTint="@color/my_light_primary"
            style="@style/Widget.MaterialComponents.Button"
            android:padding="10dp"
            android:layout_weight="1"
            android:textSize="12sp"
            />

        <Button
            android:id="@+id/btnUpgrade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/upgrade_now"
            android:textAllCaps="false"
            android:backgroundTint="@color/my_light_primary"
            style="@style/Widget.MaterialComponents.Button"
            android:padding="10dp"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

</LinearLayout>


